# sideGame

./: AddHandler.cpp  AddHandler.hpp  CMakeLists.txt  Dockerfile  Dockerfile.client  Dockerfile.server  Dockerfile.tests  FileStorageDevice.cpp  HelpHandler.cpp  HelpHandler.hpp  Identifier.cpp  Identifier.h  Integrator.cpp  LibraryDependencies.h  README.md  ReccomendHandler.cpp  ReccomendHandler.hpp  Recommend.cpp  Recommend.hpp  Storable.cpp  Storable.h  Storage.cpp  Storage.h  StorageDevice.cpp  StorageDevice.h  User.cpp  User.h  build.sh  cli_functions.cpp  cli_functions.hpp  docker-compose.yml  main.cpp
AddHandling/: AddHandler.cpp  AddHandler.hpp
CLI_Integration/: Integrator.cpp  Integrator.hpp  main.cpp
Data/: keys.txt  values.txt
HelpHandling/: HelpHandler.cpp  HelpHandler.hpp
ReccomendHandling/: ReccomendHandler.cpp  ReccomendHandler.hpp
client/: client.py  client2.py
src/: AddCommand.hpp  AppData.cpp  AppData.hpp  CMakeLists.txt  ConsoleErrorStream.cpp  ConsoleIOFactory.cpp  ConsoleOutputStream.hpp  Dockerfile  ErrorStream.hpp  FileStorageDevice.cpp  FileStorageDeviceFactory.cpp  FileStorageDeviceFactory.hpp  HelpHandler.hpp  ICommandFactory.cpp  ICommandFactory.hpp  IIOFactory.cpp  IIOFactory.hpp  IStorageDeviceFactory.hpp  InputStream.hpp  Integrator.cpp  LibraryDependencies.h  README.md  Recommend.cpp  Recommend.hpp  RecommendCommand.cpp  StdCommandFactory.hpp  StdStorage.cpp  Storage.cpp  Storage.h  StorageDevice.h  StorageIterator.cpp  StorageIterator.hpp  cli_functions.cpp  main.cpp  test.cpp
src/Can remove/: AddCommand.hpp  HelpHandler.cpp  ReccomendHandler.cpp  ReccomendHandler.hpp  Recommend.cpp  RecommendCommand.cpp  RecommendCommand.hpp
src/Classes/: App.cpp  App.hpp  AppData.cpp  (+6 more)
testsData/: keys.txt  offsets.txt  values.txt
(+83 files in other folders)
